--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,12 +4,18 @@
 }
 .header-container{
     border: 1px solid white;
+    padding: 1em;
+
+}
+.title{
+    font-size: 1.2em;
 }
 .header-item-container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
     text-align: center;
     padding: 1em;
 }
@@ -21,10 +27,53 @@
 .path-items{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex: 0.5;
+    /* gap: 4em; */
+}
+.paths{
+    text-decoration: none;
+    color: white;
+    transition: all 0.5s linear;
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
 }
 
+.paths:hover{
+    border-bottom: 1px white solid;
+}
+
+/* 
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+
+*/
+.cart-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    
+}
+.icon{
+    /* width: 2em;
+    height: 1.5em; */
+    display: flex;
+    flex-direction: row;
+    fill: white;
+    width: 30px;
+    height: 24px;
+
+    /* align-items: flex-start;
+    justify-content: flex-start; */
+    /* text-align: center; */
+}
 
 @media screen and (max-width: 360px) {
     .header-item-container{
