--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -57,13 +57,19 @@
 }
 .item-boxes{
     text-align: center;
-    border: 5px solid #ccc;
-    padding: 1em;
+    /* border: 1px solid #ccc; */
+    padding: 2em;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    background-color: #1a2a2a;
+    /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
+    /* box-shadow: 0px 4px 6px rgba(66, 133, 244, 0.5); */
+    /* box-shadow: inset 0px 4px 6px rgba(0, 0, 0, 0.1); */
+    /* box-shadow: 0px 8px 6px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
 .add-item-container{
     display: flex;
