--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -3,6 +3,12 @@
     --item-box-size-height: 255px;
     
 }
+body{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box !important;
+    font-size: 1em !important;
+}
 
 .shop-container{
     padding-top: 0;
