--- a/src/components/shoppingcart/ShoppingCart.css
+++ b/src/components/shoppingcart/ShoppingCart.css
@@ -77,6 +77,7 @@
     padding: 2em;
     gap: 1.5em;
     max-width: 700px;
+    width: 690px;
 }
 
 .shopping-cart-items{
@@ -97,7 +98,7 @@
     -o-border-radius: 0.75em; */
     display: flex;
     flex-direction: column;
-    flex: 1;
+    /* flex: 1; */
     justify-content: flex-start;
     padding: 1em;
     padding-bottom: 0em;
@@ -202,6 +203,26 @@
 .btn-rm:hover{
     color: white;
     background-color: rgb(255, 44, 44);
+}
+
+
+.no-cart-items{
+    width: 100%;
+}
+.no-items-box{
+    /* width: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.no-items-desc{
+    width: 50ch;
+    text-align: center;
+    font-size: 1.2em;
+    line-height: 1.75;
+    letter-spacing: 1px;
 }
 
 
