--- a/src/components/shoppingcart/ShoppingCart.css
+++ b/src/components/shoppingcart/ShoppingCart.css
@@ -218,11 +218,23 @@
     flex-wrap: wrap;
 }
 .no-items-desc{
-    width: 50ch;
+    /* width: 50ch;
+    text-align: center;
+    font-size: 1.2em;
+    line-height: 1.75;
+    letter-spacing: 1px; */
+    max-width: 50ch;
     text-align: center;
     font-size: 1.2em;
     line-height: 1.75;
     letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 
